Bug 488977 - Deleted panel is stuck in edit mode when restored from notification
Summary: Deleted panel is stuck in edit mode when restored from notification
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: 6.1.0
Platform: Arch Linux Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
: 489549 489973 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-06-22 12:45 UTC by rkolbaskin
Modified: 2024-07-11 04:34 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.1.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description rkolbaskin 2024-06-22 12:45:06 UTC
SUMMARY
Deleted panel, when restored by clicking "Undo" on "Panel Removed" notification, will get stuck in edit mode.

STEPS TO REPRODUCE
1. Enter edit mode
2. Create a Default Panel
3. Delete new panel
4. On "Panel Removed" notification click "Undo"
5. Exit edit mode
6. Try to use panel

OBSERVED RESULT
Panel behaves as if it is in edit mode. Widgets can't be moved, but show context menus and overlays from edit mode.

EXPECTED RESULT
Panel behaves normally

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 6.1.0
KDE Frameworks Version: 6.3.0 
Qt Version: 6.7.1
Comment 1 Filip 2024-06-22 12:48:55 UTC
I can confirm this bug.
Comment 2 Eduard 2024-06-23 09:16:36 UTC
Does this indeed describe the following problem (because in that case I also noticed it too here and then I do not need to report it again):

1. So I was in edit mode (Arch Linux, Plasma 6.1), and then I chose to Delete the panel (the taskbar).
Or actually, I did this accidentally (whoops).

2. So I immediately choose to Undo that action. Followed by exiting the Edit Mode.

3. Then I noticed that not everything "belonging" to the Edit Mode was gone, the Panel was indeed stuck in edit mode like the subject here says.
The only way  to for me to get out of this was to logout from the desktop using Ctrl+Alt+Del and login again.

I repeated it a few times (which is tricky, as I do not prefer to loose the whole panel :P) and every time it happens again, so it looks like a consistent problem.
Comment 3 Nate Graham 2024-06-25 22:28:23 UTC
Can also reproduce the original issue.
Comment 4 Bug Janitor Service 2024-06-28 12:14:12 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libplasma/-/merge_requests/1163
Comment 5 Marco Martin 2024-06-28 12:57:23 UTC
Git commit 8cb3608b0d60dac4d479b669ed2cf744d6b1ec92 by Marco Martin.
Committed on 28/06/2024 at 12:09.
Pushed by mart into branch 'master'.

On applet destroyed go out of configure mode

When an applet gets setDestroyed(true) which is the undoable
applet delete which just hides it, if userConfiguring was true,
go out of configure mode, as no configure ui should be available
when the applet doesn't exists officially anymore and more important
when the applet or the containment goes out of destroyed (undo)
no configure ui should be there

M  +2    -0    src/plasma/private/applet_p.cpp

https://invent.kde.org/plasma/libplasma/-/commit/8cb3608b0d60dac4d479b669ed2cf744d6b1ec92
Comment 6 Marco Martin 2024-06-28 13:01:53 UTC
Git commit ccfbf390d2ae4557adba049531980f783b726710 by Marco Martin.
Committed on 28/06/2024 at 12:57.
Pushed by mart into branch 'Plasma/6.1'.

On applet destroyed go out of configure mode

When an applet gets setDestroyed(true) which is the undoable
applet delete which just hides it, if userConfiguring was true,
go out of configure mode, as no configure ui should be available
when the applet doesn't exists officially anymore and more important
when the applet or the containment goes out of destroyed (undo)
no configure ui should be there


(cherry picked from commit 8cb3608b0d60dac4d479b669ed2cf744d6b1ec92)

8cb3608b On applet destroyed go out of configure mode

Co-authored-by: Marco Martin <notmart@gmail.com>

M  +2    -0    src/plasma/private/applet_p.cpp

https://invent.kde.org/plasma/libplasma/-/commit/ccfbf390d2ae4557adba049531980f783b726710
Comment 7 Filip 2024-07-01 14:54:00 UTC
*** Bug 489549 has been marked as a duplicate of this bug. ***
Comment 8 cwo 2024-07-11 04:34:01 UTC
*** Bug 489973 has been marked as a duplicate of this bug. ***