On applet destroyed go out of configure mode

When an applet gets setDestroyed(true) which is the undoable
applet delete which just hides it, if userConfiguring was true,
go out of configure mode, as no configure ui should be available
when the applet doesn't exists officially anymore and more important
when the applet or the containment goes out of destroyed (undo)
no configure ui should be there

BUG:488977